# qr-supercharge

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/api/: main.py
src/qr_supercharge/: __init__.py  cli.py  font_data.py  placement.py  qr_generator.py  verifier.py
src/tests/: __init__.py  test_qr_supercharge.py
src/web/: app.js  index.html  style.css
